--- a/militaryRecources/index.html
+++ b/militaryRecources/index.html
@@ -7,7 +7,8 @@
     <title>Military Recources</title>
 </head>
 <body>
-    <script src="military-resource-interface.js"></script>
+    <script src="militaryRecource.js"></script>
+    <script src="squad.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
